kubernetes/master/labman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labman-web
  namespace: labman-web
  labels:
    app: labman-web
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: labman-web
  template:
    metadata:
      labels:
        app: labman-web
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      volumes:
      - name: labman-static
        persistentVolumeClaim:
          claimName: labman-static
      - name: config
        configMap:
          name: labman-config
      containers:
      - name: labman-django
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        volumeMounts:
        - mountPath: /src/labman_ud/labman_ud/collected_static
          name: labman-static
          subPath: static
        - mountPath: /src/labman_ud/labman_ud/media
          name: labman-static
          subPath: media
        ports:
        - containerPort: 8000
      - name: labman-nginx
        image: nginx
        volumeMounts:
        - mountPath: /var/www/labman/static
          name: labman-static
          subPath: static
          readOnly: true
        - mountPath: /var/www/labman/media
          name: labman-static
          subPath: media
          readOnly: true
        - mountPath: /etc/nginx/nginx.conf
          name: config
          subPath: nginx.conf
          readOnly: true
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labman-db
  namespace: labman-web
  labels:
    app: labman-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labman-db
  template:
    metadata:
      labels:
        app: labman-db
    spec:
      volumes:
      - name: labman-db
        persistentVolumeClaim:
          claimName: labman-db
      containers:
      - name: labman-db
        image: postgres:9.5
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: labman-db
          subPath: db
