kubernetes/master/labman-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labman.apps.openshift.deustotech.eu
  namespace: labman-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: labman.apps.openshift.deustotech.eu
    http:
      paths:
      - backend:
          serviceName: labman-web
          servicePort: 80
  tls:
  - hosts:
    - labman.apps.openshift.deustotech.eu
    secretName: labman-web-cert
